[project]
name = "imgvisint"
version = "0.1.0"
description = "Image Upscale/Interpolation visualisation"
authors = [
    {name = "Zhdanov E.A."}
]
license = {text = "apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "filelock (==3.18.0)",
    "fonttools (==4.56.0)",
    "fsspec (==2025.3.0)",
    "h5py (==3.13.0)",
    "huggingface-hub (==0.25.2)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "kiwisolver (==1.4.8)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.1)",
    "mpmath (==1.3.0)",
    "networkx (==3.4.2)",
    "numpy (==1.25.2)",
    "opencv-python (==4.7.0.72)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "pyparsing (==3.2.1)",
    "python-dateutil (==2.9.0.post0)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "scipy (==1.9.3)",
    "six (==1.17.0)",
    "super-image (==0.1.7)",
    "sympy (==1.13.1)",
    "torch (==2.6.0)",
    "torchvision (==0.21.0)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "realesrgan @ git+https://github.com/sberbank-ai/Real-ESRGAN.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
